<resources>
    <string name="app_name">practica_t1</string>
    <string name="rawLeft">⟵</string>
    <string name="buscar">Buscar...</string>
    <string name="VU">Verifica tu <font color="#FF8000">ubicación</font></string>
    <string name="Av1">Av. Brazil 5515, SJ</string>
    <string name="Dp1">Perú dirección 1</string>
    <string name="Btp">Busca tiendas o productos</string>
    <string name="arroz">Arroz</string>
    <string name="galleta">Galleta</string>
    <string name="cerveza">Cerveza</string>
    <string name="fruta">Fruta</string>

    <string name="Linea_larga"> <font color="FF8000">──</font></string>
</resources>